feat(group): finalize group member management APIs & fix race conditions